[tool.poetry]
name = "jasoso"
version = "0.1.0"
description = ""
authors = ["indoor98 <98157935+indoor98@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
